Added lots of functionality for setting up games

--- a/tox.ini
+++ b/tox.ini
@@ -41,4 +41,4 @@ setenv =
     FLASK_ENV=development
 commands =
     # python run_server.py
-    python -m flask run
+    python -m flask run --host 0.0.0.0 --port 8764
