Further improved get_pending_stacks logic, implemented image uploading

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ deps =
 setenv =
     TP_ENV = test
     FLASK_ENV=development
+    FLASK_RUN_PORT=8764
 commands =
     pytest tests/
 
@@ -18,7 +19,8 @@ envdir={toxworkdir}/py38
 deps =
     -rrequirements.txt
 setenv =
-    TP_ENV = dev
+    TP_ENV=dev
+    FLASK_RUN_PORT=8764
 commands =
     python populate_db.py
 
@@ -27,7 +29,8 @@ basepython=python3.8
 deps =
     -rrequirements.txt
 setenv =
-    TP_ENV = dev
+    TP_ENV=dev
+    FLASK_RUN_PORT=8764
 commands =
     python -m ws.run_server
 
@@ -36,9 +39,10 @@ basepython=python3.8
 deps =
     -rrequirements.txt
 setenv =
-    TP_ENV = dev
+    TP_ENV=dev
     FLASK_APP=flask_app/__init__.py
     FLASK_ENV=development
+    FLASK_RUN_PORT=8764
 commands =
     # python run_server.py
-    python -m flask run --host 0.0.0.0 --port 8764
+    python -m flask run --host 0.0.0.0
