Small bugfixes, added test_db tox target and made tox -e db initialize an empty database

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,18 @@ setenv =
     TP_ENV=dev
     FLASK_RUN_PORT=8764
 commands =
-    python populate_db.py
+    python init_db.py
+
+[testenv:test_db]
+basepython=python3.8
+envdir={toxworkdir}/py38
+deps =
+    -rrequirements.txt
+setenv =
+    TP_ENV=dev
+    FLASK_RUN_PORT=8764
+commands =
+    python init_db.py --populate
 
 [testenv:ws]
 basepython=python3.8
