Added linting, rearranged package layout

--- a/tox.ini
+++ b/tox.ini
@@ -5,18 +5,32 @@ envlist=py38
 basepython=python3.8
 envdir={toxworkdir}/py38
 deps =
+    pytest
     -rrequirements.txt
 setenv =
-    TP_ENV = test
+    TP_ENV=test
     FLASK_ENV=development
     FLASK_RUN_PORT=8764
 commands =
     pytest tests/
 
+[testenv:lint]
+basepython=python3.8
+envdir={toxworkdir}/py38
+deps =
+    pylint
+    -rrequirements.txt
+setenv =
+    TP_ENV=test
+    FLASK_RUN_PORT=8764
+commands =
+    pylint telepict
+
 [testenv:db]
 basepython=python3.8
 envdir={toxworkdir}/py38
 deps =
+    pylint
     -rrequirements.txt
 setenv =
     TP_ENV=dev
@@ -43,7 +57,7 @@ setenv =
     TP_ENV=dev
     FLASK_RUN_PORT=8764
 commands =
-    python -m ws.run_server
+    python -m telepict.ws.run_server
 
 [testenv:flask]
 basepython=python3.8
@@ -51,7 +65,7 @@ deps =
     -rrequirements.txt
 setenv =
     TP_ENV=dev
-    FLASK_APP=flask_app/__init__.py
+    FLASK_APP=telepict/flask_app/__init__.py
     FLASK_ENV=development
     FLASK_RUN_PORT=8764
 commands =
