Added reset_password script

--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ setenv =
     TP_ENV=dev
     FLASK_RUN_PORT=8764
 commands =
-    python init_db.py
+    python -m scripts.init_db
 
 [testenv:test_db]
 basepython=python3.8
@@ -47,7 +47,7 @@ setenv =
     TP_ENV=dev
     FLASK_RUN_PORT=8764
 commands =
-    python init_db.py --populate
+    python -m scripts.init_db --populate
 
 [testenv:ws]
 basepython=python3.8
