Added environment-based logging configuration, separate logger for websocket server

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     pytest
     -rrequirements.txt
 setenv =
-    TP_ENV=test
+    TELEPICT_ENV=test
     FLASK_ENV=development
     FLASK_RUN_PORT=8764
 commands =
@@ -21,7 +21,7 @@ deps =
     pylint
     -rrequirements.txt
 setenv =
-    TP_ENV=test
+    TELEPICT_ENV=test
     FLASK_RUN_PORT=8764
 commands =
     pylint telepict
@@ -33,7 +33,7 @@ deps =
     pylint
     -rrequirements.txt
 setenv =
-    TP_ENV=dev
+    TELEPICT_ENV=dev
     FLASK_RUN_PORT=8764
 commands =
     python -m scripts.init_db
@@ -44,7 +44,7 @@ envdir={toxworkdir}/py38
 deps =
     -rrequirements.txt
 setenv =
-    TP_ENV=dev
+    TELEPICT_ENV=dev
     FLASK_RUN_PORT=8764
 commands =
     python -m scripts.init_db --populate
@@ -54,7 +54,7 @@ basepython=python3.8
 deps =
     -rrequirements.txt
 setenv =
-    TP_ENV=dev
+    TELEPICT_ENV=dev
     FLASK_RUN_PORT=8764
 commands =
     python -m telepict.ws.run_server
@@ -64,7 +64,7 @@ basepython=python3.8
 deps =
     -rrequirements.txt
 setenv =
-    TP_ENV=dev
+    TELEPICT_ENV=dev
     FLASK_APP=telepict/flask_app/__init__.py
     FLASK_ENV=development
     FLASK_RUN_PORT=8764
