More logging config; set up file handler for werkzeug access messages and added a filter

--- a/tox.ini
+++ b/tox.ini
@@ -68,5 +68,7 @@ setenv =
     FLASK_APP=telepict/flask_app/__init__.py
     FLASK_ENV=development
     FLASK_RUN_PORT=8764
+passenv =
+    LOG_DIR
 commands =
     python -m flask run --host 0.0.0.0
