Used Gunicorn as server.

--- a/telepict.service
+++ b/telepict.service
@@ -5,7 +5,7 @@ Description=Telepict service
 User=ec2-user
 WorkingDirectory=/home/ec2-user/telepict
 EnvironmentFile=/etc/sysconfig/telepict
-ExecStart=/usr/bin/python3 -m flask run
+ExecStart=/home/ec2-user/.local/bin/gunicorn -c python:gunicorn_config telepict.flask_app:app
 Restart=always
 
 [Install]
