--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-flask
-numpy
-Pillow
-setuptools
-sqlalchemy
-websockets
-pytz
-logging_tree
-redis
-boto3
-aioboto3
+flask>=2.0.1
+Pillow>=8.2.0
+setuptools>=57.0
+sqlalchemy==1.4.15
+websockets==9.1
+pytz==2021.1
+logging_tree==1.9
+redis==3.5.3
+# boto3==1.17.84
+aioboto3==8.3.0
+cryptography>=3.4
